force-app/main/default/objects/Customs_Document__c/Customs_Document__c.object-meta.xml
<CustomObject>
    <description>Holds information about the status of the customs procedure.</description>
    <label>Customs Document</label>
    <nameField>
        <displayFormat>CD-{000}</displayFormat>
        <label>Customs Document Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customs Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>