force-app/main/default/objects/Customs_Document__c/fields/Clearance_Status__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Status__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <description>Indicates the current status of the customs process.</description>
    <label>Clearance Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>