force-app/main/default/objects/Customs_Document__c/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The date when the customs documents were submitted.</description>
    <label>Date Submitted</label>
    <required>true</required>
    <type>Date</type>
</CustomField>