force-app/main/default/objects/Customs_Document__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Reason why the customs process was rejected.</description>
    <label>Rejection Reason</label>
    <type>TextArea</type>
</CustomField>